// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard should render properly with Dead status 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
        >
          <img
            alt="green iguana"
            class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            width="200px"
          />
          <div
            class="MuiCardHeader-root css-13fwgw0-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiCardHeader-title css-1l8qytf-MuiTypography-root"
              >
                Test Name
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-zzcnnq-MuiTypography-root"
              >
                location test
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-71xg00-MuiCardContent-root"
          >
            <div
              class="MuiBox-root css-uwdvlb"
            >
              <h4
                class="MuiTypography-root MuiTypography-h5 css-wr0xd3-MuiTypography-root"
              >
                Dead
              </h4>
            </div>
            <div
              class="MuiBox-root css-1vr2anf"
            >
              <h5
                class="MuiTypography-root MuiTypography-subtitle1 css-1smqr0y-MuiTypography-root"
              >
                First seen in:
              </h5>
              <div
                class="css-1ouuv2g-MuiStack-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
                >
                  Test Name
                </h6>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
                >
                  (Test Episode)
                </h6>
              </div>
            </div>
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
      >
        <img
          alt="green iguana"
          class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          width="200px"
        />
        <div
          class="MuiCardHeader-root css-13fwgw0-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiCardHeader-title css-1l8qytf-MuiTypography-root"
            >
              Test Name
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-zzcnnq-MuiTypography-root"
            >
              location test
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-71xg00-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-uwdvlb"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 css-wr0xd3-MuiTypography-root"
            >
              Dead
            </h4>
          </div>
          <div
            class="MuiBox-root css-1vr2anf"
          >
            <h5
              class="MuiTypography-root MuiTypography-subtitle1 css-1smqr0y-MuiTypography-root"
            >
              First seen in:
            </h5>
            <div
              class="css-1ouuv2g-MuiStack-root"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
              >
                Test Name
              </h6>
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
              >
                (Test Episode)
              </h6>
            </div>
          </div>
        </div>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CharacterCard should render properly with default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
        >
          <img
            alt="green iguana"
            class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
            width="200px"
          />
          <div
            class="MuiCardHeader-root css-13fwgw0-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiCardHeader-title css-1l8qytf-MuiTypography-root"
              >
                Test Name
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-zzcnnq-MuiTypography-root"
              >
                location test
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-71xg00-MuiCardContent-root"
          >
            <div
              class="MuiBox-root css-uwdvlb"
            >
              <h4
                class="MuiTypography-root MuiTypography-h5 css-1p5zgwg-MuiTypography-root"
              >
                Alive
              </h4>
            </div>
            <div
              class="MuiBox-root css-1vr2anf"
            >
              <h5
                class="MuiTypography-root MuiTypography-subtitle1 css-1smqr0y-MuiTypography-root"
              >
                First seen in:
              </h5>
              <div
                class="css-1ouuv2g-MuiStack-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
                >
                  Test Name
                </h6>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
                >
                  (Test Episode)
                </h6>
              </div>
            </div>
          </div>
          <div
            class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
      >
        <img
          alt="green iguana"
          class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          width="200px"
        />
        <div
          class="MuiCardHeader-root css-13fwgw0-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiCardHeader-title css-1l8qytf-MuiTypography-root"
            >
              Test Name
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-zzcnnq-MuiTypography-root"
            >
              location test
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-71xg00-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-uwdvlb"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 css-1p5zgwg-MuiTypography-root"
            >
              Alive
            </h4>
          </div>
          <div
            class="MuiBox-root css-1vr2anf"
          >
            <h5
              class="MuiTypography-root MuiTypography-subtitle1 css-1smqr0y-MuiTypography-root"
            >
              First seen in:
            </h5>
            <div
              class="css-1ouuv2g-MuiStack-root"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
              >
                Test Name
              </h6>
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-516ssh-MuiTypography-root"
              >
                (Test Episode)
              </h6>
            </div>
          </div>
        </div>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
